# rua_pairtrade_stochastic

./: README.md  pyproject.toml
notebooks/: control_panel.ipynb
rua_pairtrade_stochastic/: conductor.py  generate_data.py
